@@ -1,3 +1,10 @@
+2003-04-25  Richard Henderson  <rth@redhat.com>
+
+	* config/ia64/ia64.c (ia64_compute_frame_size): Allow inline asm
+	to clobber ar.pfs and ar.unat.
+	(ia64_expand_prologue): Force alloc instruction if ar.pfs saved;
+	fix test for spilling ar.pfs to the stack.
+
 2003-10-26  Jakub Jelinek  <jakub@redhat.com>
 	    Jan Hubicka  <jh@suse.cz>
 
